tests/ui/union.stderr
error: fixed-derive error: Deriving ReadFixed on unions is not supported
 --> tests/ui/union.rs:5:1
  |
5 | union MyUnion {
  | ^^^^^

error: fixed-derive error: Deriving WriteFixed on unions is not supported
 --> tests/ui/union.rs:5:1
  |
5 | union MyUnion {
  | ^^^^^
